--- a/presentation/index.html
+++ b/presentation/index.html
@@ -171,7 +171,7 @@
 </section>
 
 <section>
-   <h2> Why the JVM? </h2>
+   <h2> Why JVM? </h2>
      <ul>
          <li> Widely adopted</li>
          <li> Stable</li>
@@ -255,7 +255,7 @@
     <h2> We began the transition to scala and play </h3></h2>
     <br>
     <h3> LOSA - Lots Of Small Apps </h3>
-    <h3> Same motivation and benefits of Micro-Service-Architecture </h3>
+    <h3> Same motivation and benefits of Micro-Service Architecture </h3>
 </section>
 
 <section>
@@ -291,10 +291,10 @@
                   7895, #svc-Loyalty
                   8155, #web-loyalty
                   9410, #web inventory status
-                  7898, #admin-loylaty
+                  7898, #admin-loyalty
                   7899, #notification
                   7102, #rouge
-                  9530, #svc-componenet
+                  9530, #svc-component
                   6802, #svc-waitlist-submit
                   4066, #svc-action-sale
                   ....
@@ -372,7 +372,8 @@
 </section>
 
 <section>
-    <h2> We transitioned to Micro-DBS -> <br> Third of the services have their own </h2>
+    <h2> We transitioned to Micro-DBS </h2>
+    <h3>Third of the services have their own </h3>
     <br><br>
     <h3>MongoDB
         <br><br>Postgres <br><br> Voldemort </h3>
@@ -384,10 +385,10 @@
 <section>
     <h2> Principles of <br> Schema Evolution Manager </h2>
     <ul>
-        <li> You can manage the schema evolutions in a Git repo </li>
+        <li> Can manage the schema evolutions in a Git repo </li>
         <li> Schema changes are deployed as tar flies </li>
         <li> No rollbacks</li>
-        <li> Schema changes are required to be incremental. </li>
+        <li> Schema changes are required to be incremental </li>
     </ul>
 </section>
 <section>
@@ -539,7 +540,7 @@
 </section>
 
 <section>
-    <h2> Why to switch to Scala from Java </h2>
+    <h2> Why switch to Scala from Java </h2>
     <ul>
         <li> Object-Functional Programming </li>
         <li> Immutability that leads to easier concurrency </li>
@@ -557,7 +558,7 @@
 </section>
 
 <section>
-    <h2> Why Not to switch to Scala from Java </h2>
+    <h2> Why Not switch to Scala from Java </h2>
     <ul>
         <li> Learning Curve</li>
         <li> SBT is not that simple </li>
